# adapto-rs-teaching

./: Cargo.toml  README.md
.github/workflows/: cargo_build_and_test.yml
src/: lib.rs  main.rs
