[package]
name = "adaptrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
rust-htslib = { version = "*", default-features = false }
rayon = "1.7"
num_cpus = "1.0"
