[package]
name = "adapto-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
rayon = "1.7"
num_cpus = { version = "1.16.0", default-features = false }
file-format = { version = "0.23.0", default-features = false, features = ["reader-zip", "reader-txt"] }
rust-htslib = { version = "0.44.1", default-features = false }
clap-num = "1.1.1"
